Reports/task8.txt
- Lalayev_Farid
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
- Akbar_Huseynzada
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
+ Aziz_Ahmadov
- Balagiz_Orujova
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
+ Chichak_Bairam
- Eldar_Asgarov
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
- Elvin_Mammadov
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
+ Farid_Ismayilov
+ Fatima_Omarova
+ Fidan_Babayeva
+ Gulnur_Mammadova
- Khayal_Hasanli
######### Output: #########

  File "Tasks/Task_8/Students/task8_Khayal_Hasanli.py", line 2
    if a%2=0:
          ^
SyntaxError: invalid syntax

  File "Tasks/Task_8/Students/task8_Khayal_Hasanli.py", line 2
    if a%2=0:
          ^
SyntaxError: invalid syntax

  File "Tasks/Task_8/Students/task8_Khayal_Hasanli.py", line 2
    if a%2=0:
          ^
SyntaxError: invalid syntax

######### Answer: #########

Even

Even

Odd

###########################
+ Laman_Hasanli
+ Mahammadjan_Mahammadjanov
- Malik_Akqubayev
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
+ Mehemmed_Mehdi
+ Nigar_Hasanli
- Nihad_Qiyasli
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
+ Oktay_Nabili
+ Radmila_Musayeva
+ Ravan_Hajiyev
+ Sakina_Aliyeva
+ Vugar_Abdulaliyev
+ ferid_ceferli
- tahir_eskerli
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
- tarlan_kazimli
######### Output: #########

even

even

odd

######### Answer: #########

Even

Even

Odd

###########################
